--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "fuzzle-hunt",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babylonjs/controls": "^2.0.0-alpha.1",
+    "@babylonjs/core": "^5.10.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.8.3",
+    "@onflow/fcl": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "paper": "^0.12.15",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-highlight": "^0.14.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
