--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babylonjs/controls": "^2.0.0-alpha.1",
-    "@babylonjs/core": "^5.10.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.7",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
-    "@onflow/fcl": "^1.0.2",
+    "@onflow/fcl": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +19,7 @@
     "react-highlight": "^0.14.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -28,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
