--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ REACT_APP_FCL_ENDPOINT=https://rest-testnet.onflow.org
 REACT_APP_NFT_ADDRESS=0x631e88ae7f1d7c20
 REACT_APP_FUZZLE_ADDRESS=0x8399b56f1cd01d8b
 REACT_APP_METADATA_ADDRESS=0x631e88ae7f1d7c20
+REACT_APP_MINT_ENDPOINT=https://mint-by-guid-1-ijlbsclomq-uc.a.run.app 
 
